# wasm-game-engine

./: Cargo.toml  DEPLOYMENT-NOTE.md  LICENSE  README.md  build.bat  build.sh  deploy-simple.bat  deploy.bat  index.html  package-lock.json  package.json
docs/: API.md
examples/: basic-demo.html  space-game.html
js/: game-engine.js  simple-engine.js
src/: lib.rs
src/audio/: audio_manager.rs  mod.rs
src/core/: ecs.rs  engine.rs  mod.rs  time.rs
src/graphics/: camera.rs  mod.rs  renderer.rs  shader.rs  texture.rs
src/input/: input_manager.rs  mod.rs
src/math/: mat4.rs  mod.rs  vec2.rs  vec3.rs
src/physics/: collision.rs  mod.rs  physics_world.rs
src/utils/: mod.rs
